Fix up styling of search, especially in dark mode.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -25,6 +25,9 @@
   --ifm-footer-background-color: var(--budgie-green);
   --ifm-navbar-background-color: var(--lightgrey);
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+
+  /* Search */
+  --docsearch-searchbox-background: white;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -39,6 +42,42 @@
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-navbar-background-color: var(--greydark);
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+[data-theme="dark"] .DocSearch-Modal {
+  --docsearch-modal-background: var(--dark);
+  --docsearch-footer-background: var(--dark);
+  --docsearch-searchbox-shadow: white;
+  --docsearch-highlight-color: var(--greyish);
+  --docsearch-hit-background: var(--greydark);
+}
+
+.DocSearch-Button {
+  --docsearch-searchbox-background: white;
+}
+
+.DocSearch-Hit-title mark {
+  font-weight: bold;
+}
+
+[data-theme="dark"] .DocSearch-Logo svg * {
+  fill: white;
+}
+
+[data-theme="dark"] .DocSearch-Hit-title mark {
+  --docsearch-highlight-color: var(--budgie-green);
+  --docsearch-hit-active-color: var(--budgie-green);
+}
+
+[data-theme="dark"] .DocSearch-Button {
+  --docsearch-searchbox-background: var(--dark);
+}
+
+[data-theme="dark"] .DocSearch-Commands-Key,
+[data-theme="dark"] .DocSearch-Button-Key {
+  --docsearch-key-gradient: var(--greyish);
+  --docsearch-key-shadow: var(--greydark);
+  color: white;
 }
 
 .GetBudgieButton {
